# Simple component buildsystem
include $(top_srcdir)/build.rules.mk

ASSEMBLY = Do.Universe
TARGET = library

PKG_CONFIG_FILES = do.universe.pc

FILES = \
	src/AssemblyInfo.cs \
	src/Do.Universe/Act.cs \
	src/Do.Universe/ContactItem.cs \
	src/Do.Universe/Do.Universe.Common/BookmarkItem.cs \
	src/Do.Universe/Do.Universe.Common/TextItem.cs \
	src/Do.Universe/Do.Universe.Common/EmailContactDetailItem.cs \
	src/Do.Universe/Do.Universe.Common/PhoneContactDetailItem.cs \
	src/Do.Universe/Do.Universe.Common/AddressContactDetailItem.cs \
	src/Do.Universe/Do.Universe.Common/ContactDetailItem.cs \
	src/Do.Universe/Do.Universe.Safe/SafeAct.cs \
	src/Do.Universe/Do.Universe.Safe/SafeElement.cs \
	src/Do.Universe/Do.Universe.Safe/SafeItem.cs \
	src/Do.Universe/Do.Universe.Safe/SafeItemSource.cs \
	src/Do.Universe/DynamicItemSource.cs \
	src/Do.Universe/Element.cs \
	src/Do.Universe/EmptyElement.cs \
	src/Do.Universe/EmptyItem.cs \
	src/Do.Universe/IApplicationItem.cs \
	src/Do.Universe/IBookmarkItem.cs \
	src/Do.Universe/IChildItemSource.cs \
	src/Do.Universe/IContactDetailItem.cs \
	src/Do.Universe/IFileItem.cs \
	src/Do.Universe/IItem.cs \
	src/Do.Universe/IOpenableItem.cs \
	src/Do.Universe/IRunnableItem.cs \
	src/Do.Universe/ITextItem.cs \
	src/Do.Universe/IUriItem.cs \
	src/Do.Universe/IUrlItem.cs \
	src/Do.Universe/Item.cs \
	src/Do.Universe/ItemSource.cs \
	src/Do.Universe/ProxyItem.cs

RESOURCES = \
	Resources/phone.png \
	Resources/Do.Universe.addin.xml

REFERENCES =  \
	System \
	System.Core \
	Mono.Posix
